Ref #29272: upgrade to JDK 17 + corresponding code improvements