@@ -25,7 +25,6 @@ import org.slf4j.LoggerFactory;
 import org.springframework.core.convert.converter.Converter;
 import org.springframework.core.env.Environment;
 import org.springframework.security.authentication.AbstractAuthenticationToken;
-import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.saml2.provider.service.authentication.DefaultSaml2AuthenticatedPrincipal;
@@ -77,14 +76,14 @@ public class ResponseAuthenticationConverter implements Converter<OpenSamlAuthen
         }
 
         Optional<String> nameValue = getSingleAttributeValue(principal, nameAttribute);
-        if (!nameValue.isPresent()) {
+        if (nameValue.isEmpty()) {
             throw new UsernameNotFoundException(String.format("[SAML] User: \"%s\" => name attribute missing from SAML assertion", nameId));
         }
 
-        List<GrantedAuthority> grantedAuthorities = new ArrayList<>();
+        List<SimpleGrantedAuthority> grantedAuthorities = new ArrayList<>();
         if (rolesAttribute != null && !rolesAttribute.trim().isEmpty()) {
             Optional<List<String>> rolesValue = getMultipleAttributeValues(principal, rolesAttribute);
-            if (!rolesValue.isPresent()) {
+            if (rolesValue.isEmpty()) {
                 logger.warn("[SAML] User: \"{}\" => roles attribute missing from SAML assertion", nameId);
             } else {
                 grantedAuthorities = rolesValue.get().stream()
@@ -94,7 +93,7 @@ public class ResponseAuthenticationConverter implements Converter<OpenSamlAuthen
                             }
                             return new SimpleGrantedAuthority(r);
                         })
-                        .collect(Collectors.toList());
+                        .toList();
             }
         }
 
@@ -119,7 +118,7 @@ public class ResponseAuthenticationConverter implements Converter<OpenSamlAuthen
 
     private Optional<String> getSingleAttributeValue(DefaultSaml2AuthenticatedPrincipal principal, String attributeName) {
         Optional<List<Object>> res = getAttributeIgnoringCase(principal, attributeName);
-        if (!res.isPresent() || res.get().size() == 0) {
+        if (res.isEmpty() || res.get().size() == 0) {
             return Optional.empty();
         }
         return Optional.of(res.get().get(0).toString());
@@ -130,7 +129,7 @@ public class ResponseAuthenticationConverter implements Converter<OpenSamlAuthen
                 .map(objects -> objects
                         .stream()
                         .map(Object::toString)
-                        .collect(Collectors.toList())
+                        .toList()
                 );
     }
 
