@@ -44,7 +44,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -143,6 +142,6 @@ public class SpecExpressionResolver {
 					}
 					return Stream.of(result.toString());
 				})
-				.collect(Collectors.toList());
+				.toList();
     }
 }
